examples/neg/multi_arity_match_exhaustivity.effekt
def foo[A, B, C](a: A, b: B){ fn: (A, B) => C }: C = {
  fn(a, b)
}

def main() = {
  foo(1, false){
    case _, true => () // ERROR Non-exhaustive
  }
}